@@ -1,8 +1,9 @@
 *** WooCommerce Payments Changelog ***
 
 = 3.6.0 - 2022-xx-xx =
-* Fix UPE validation error visibility on checkout page.
+* Fix - UPE validation error visibility on checkout page.
 * Add - Add support for full transaction exports.
+* Fix - Flag emoji rendering in currency switcher block widget
 
 = 3.5.0 - 2021-12-29 =
 * Fix - Error when renewing subscriptions with saved payment methods disabled.
